Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-86593

MoveCollection hangs if the destination shard is specified as the shard url

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Cluster Scalability
    • Minor Change
    • ALL
    • v8.0
    • Cluster Scalability Priorities
    • 3

      If you call moveCollection and specify the destination using the url of the shard rather than the shard name, the resharding operation will hang.

      ex.
       

      assert.commandWorked(st.s.adminCommand({moveCollection: unsplittableCollNs, toShard: st.rs0.getURL()}));

      will hang the test.

      This is something we actually allow for movePrimary (see this test as an example) so I would expect this to work fine.
       

            Assignee:
            david.chen@mongodb.com David Chen
            Reporter:
            allison.easton@mongodb.com Allison Easton
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: