SERVER-86593: prevent moveCollection from hanging on shard url (#29899)

GitOrigin-RevId: 494952c45572255392168e6b14e3f1715281ffac